--- a/themes/hello-friend-ng/layouts/shortcodes/mermaid.html
+++ b/themes/hello-friend-ng/layouts/shortcodes/mermaid.html
@@ -1,19 +1,12 @@
-{{ $_hugo_config := `{ "version": 1 }` }}
-<!--
-    file name and path from; https://github.com/matcornic/hugo-theme-learn/blob/master/layouts/shortcodes/mermaid.html
-    shortcode js/html from; https://liveaverage.com/projects/integration-mermaid/
--->
-<script src="https://unpkg.com/mermaid@8.1.0/dist/mermaid.min.js" type="text/javascript"></script>
-<script type="text/javascript">
-    mermaid.initialize({ 
-        theme: 'dark',
-        themeCSS: '',
-        cloneCssStyles: false,
-        useMaxWidth: true,
-        htmlLabels: false,
-        flowchart: { 
-                curve: 'basis' 
-        }
-    });
+<script async type="application/javascript" src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js">
+  var config = {
+    startOnLoad:true,
+    theme:'{{ if .Get "theme" }}{{ .Get "theme" }}{{ else }}dark{{ end }}',
+    align:'{{ if .Get "align" }}{{ .Get "align" }}{{ else }}center{{ end }}'
+  };
+  mermaid.initialize(config);
 </script>
-<pre class="mermaid" align="{{ if .Get "align" }}{{ .Get "align" }}{{ else }}center{{ end }}">{{ safeHTML .Inner }}</pre>
+
+<div class="mermaid">
+  {{.Inner}}
+</div>
